add: sample file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "draft-js-study",
   "description": "For studying [draft.js](https://facebook.github.io/draft-js/docs/overview.html#content).",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
